# WirelessDMX

./: .gitignore  CMakeLists.txt  Pico-DMX  README.txt  build.sh  copy.sh  dmxSend.py  dmxTxCopierEffect.py  lanternRx.py  pythonRx.py  serialmon.sh  wirelessDMXReceiver.ino  wirelessDMXTransmitter.cpp
dhcpserver/: dhcpserver.c
wirelessDMXReceiver/: wirelessDMXReceiver.ino
wirelessDMXReceiverDMXOutput/wirelessDMXReceiverDMXOutput/: README.txt  wirelessDMXReceiverDMXOutput.ino
